# research_earthquake

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
sql/: main.sql
src/: earthquake_one_day_to_s3.py  earthquake_one_year_to_s3.py
